# GSrenderer

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROGRESS.md  SPLATCAST_PLAN.md
assets/fixtures/: cube_deg3.ply  grid_fiducial.ply
cmake/: Dependencies.cmake
configs/: example_lens.csv  example_run.toml
docs/: android-freed-app-brief.md  architecture.md  freed-protocol.md  splat-memory-layout.md  ue5-ndi-setup.md
docs/decisions/: 0001-glm-math-library.md  README.md
docs/verification/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md
src/app/: CMakeLists.txt  config.cpp  config.hpp  main.cpp  preview.cpp  preview.hpp
src/core/: CMakeLists.txt  camera.cpp  camera.hpp  log.cpp  log.hpp  transforms.cpp  transforms.hpp  version.cpp  version.hpp
src/loader/: CMakeLists.txt  ply_loader.cpp  ply_loader.hpp  splat_data.cpp  splat_data.hpp
src/output/: CMakeLists.txt  frame_pacer.cpp  frame_pacer.hpp
src/output/ndi/: ndi_sender.cpp  ndi_sender.hpp
src/renderer/: CMakeLists.txt  covariance.hpp  ewa_frame.hpp  readback.cu  readback.hpp  sh.hpp  splat_renderer.cu  splat_renderer.hpp
src/tracking/: CMakeLists.txt  freed.cpp  freed.hpp  lens_table.cpp  lens_table.hpp  pose_predictor.cpp  pose_predictor.hpp  udp_listener.cpp  udp_listener.hpp
tests/: CMakeLists.txt  test_camera.cpp  test_config.cpp  test_covariance.cpp  test_ewa_frame.cpp  test_fixture_asset.cpp  test_frame_pacer.cpp  test_freed.cpp  test_lens_table.cpp  test_log.cpp  test_ply_loader.cpp  test_pose_predictor.cpp  test_renderer_gpu.cpp  test_sh.cpp  test_splat_data.cpp  test_transforms.cpp  test_udp_listener.cpp  test_version.cpp
tools/: make_fiducial_ply.py  make_fixture_ply.py
tools/asset_inspector/: CMakeLists.txt  main.cpp
tools/freed_simulator/: CMakeLists.txt  main.cpp
